# Cache-Benchmarks

./: .gitignore  CMakeLists.txt  README.md
01-Bandwidth/: CMakeLists.txt  main.cpp
02-Cache-Basics/: CMakeLists.txt  main.cpp
03-AOS-SOA/: CMakeLists.txt  main.cpp
04-Prefetch/: CMakeLists.txt  main.cpp
05-Read-Write/: CMakeLists.txt  main.cpp
06-Fusion/: CMakeLists.txt  main.cpp
07-Jacobi/: CMakeLists.txt  main.cpp
08-Malloc/: CMakeLists.txt  main.cpp
09-Efficient-Malloc/: CMakeLists.txt  main.cpp
10-NdArray/: CMakeLists.txt  main.cpp
11-Stencil/: CMakeLists.txt  main.cpp
12-Stencil-Row/: CMakeLists.txt  main.cpp
include/: AlignedAlloc.h  NdArray.h  Pod.h  Ticktock.h
